--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ p.add-event { margin-top:16px; color:#444; }
 </div>
 
 <!-- Persistent rollout invite image -->
-<img class="below-image" src="https://events.tlmoto.tecnico.ulisboa.pt/Convite%20Rollout.jpg" alt="TLMoto Image" />
+<img class="below-image" src="https://i.imgur.com/nc9QWA8.jpeg" alt="TLMoto Image" />
 
 <script>
 const recordId = new URLSearchParams(window.location.search).get('record');
@@ -167,3 +167,4 @@ function goBack(current, previous){
 
 </body>
 </html>
+
