--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ p.add-event { margin-top:16px; color:#444; }
 
 <!-- Step 1: RSVP -->
 <div id="rsvp" class="rsvp-card">
-  <h2>Vai estar presente no Rollout da TLM05e?</h2>
+  <h2>Estarei presente no Rollout TLM05e?</h2>
   <div class="rsvp-buttons">
     <button class="yes-btn" onclick="showType()">Sim</button>
     <button class="no-btn" onclick="submitNo()">Não</button>
